--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -18,9 +18,18 @@ jobs:
           svg_out_path: dist/github-contribution-grid-snake2.svg
           snake_color: 'blue'
 
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+      - uses: crazy-max/ghaction-import-gpg@v5
         with:
-          target_branch: output
-          build_dir: dist
+          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          git_user_signingkey: true
+          git_commit_gpgsign: true
+
+      - uses: crazy-max/ghaction-github-pages@v4
+        with:
+          target_branch: gh-pages
+          build_dir: public
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
